--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SimpleLogin</string>
+    <string name="app_name">Jetpack</string>
 
     <string name="login">Login</string>
     <string name="forgot_password">Forgot Password?</string>
